# matrix_norm_omp

./: CMakeLists.txt  Matrix Norm with OpenMP Performance Analyses.ipynb  README.md  matrix_norm_omp.c
